# singlyton

./: Cargo.toml  README.md
src/: cell.rs  lib.rs  tests.rs
src/nightly/: debug.rs  mod.rs
src/stable/: debug.rs
