[package]
name = "singlyton"
version = "1.2.1"
edition = "2021"
description = "Safe, single-threaded global state in Rust."
authors = ["William Venner <william@venner.io>"]
keywords = ["single-threaded", "global-state", "static", "static-mut"]
license = "MIT"
repository = "https://github.com/WilliamVenner/singlyton"

[features]
default = ["std"]
std = []